# unreal-blender-mcp

./: .gitignore  .gitmodules  Project-document.md  README.md  main.py  pyproject.toml  run_extended_server.py
UEPythonServer/: README.md  UEPythonServer.uplugin
UEPythonServer/Source/UEPythonServer/: UEPythonServer.Build.cs
UEPythonServer/Source/UEPythonServerEditor/: UEPythonServerEditor.Build.cs
developflow/: 01-project-setup.md  02-mcp-server-core.md  06-ai-agent-integration.md  07-documentation-refinement.md
docs/: ai-tools-guide.md
example/UEPythonServer/: UEPythonServer.uplugin
src/unreal_blender_mcp/: __init__.py  blender_connection.py  langchain_integration.py  prompt_examples.py  prompts.py  server.py  unreal_connection.py
src/unreal_blender_mcp/ai_tools/: __init__.py  prompt_engineering.py  tool_definitions.py  tool_handler.py
src/unreal_blender_mcp/blender_addon/: README.md  __init__.py  (+3 more)
tests/: README.md  __init__.py  run_integration_tests.py  test_connections.py  test_langchain.py  test_server.py
tests/integration/: __init__.py  connections.py  test_config.py  test_integration.py  test_server_integration.py
tests/test_data/: create_actor.py  create_blueprint.py  create_cube.py  create_material.py  export_from_blender.py  import_to_unreal.py
tests/utils/: __init__.py  request_simulator.py
workflow/: 00-development-plan.md  01-project-setup.md  02-mcp-server-core.md  03-blender-addon-integration.md  04-unreal-plugin-development.md  05-integration-testing.md  06-ai-agent-integration.md  08-unreal-engine-refinement.md  development-log.md
(+25 files in other folders)
